<resources>
    <string name="app_name">jwNumbersSetterData</string>
    <string name="email">електронная почта</string>
    <string name="password">пароль</string>
    <string name="emailAdress">email</string>
    <string name="create_store">создать хранилище</string>
    <string name="open_store">добавить данные в хранилище</string>
    <string name="sore_not_open">хранилище не подключено</string>
    <string name="open_store_or_create">открыть/создать хранилище</string>
    <string name="suches_connect">хранилище успешно подключено</string>
    <string name="no_suches_connect">не подключено хранилище</string>
    <string name="not_suches_open_store">не удалось найти хранилище</string>
    <string name="suches_open_store">хранилище успешно заполнено</string>
    <string name="suches_create_store">хранилище создано</string>
    <string name="not_suches_create_store">не удалось создать хранилище</string>
    <string name="instruction_menu_text">инструкция</string>
    <string name="instruction">Совет: создать номера в таблице (xlsx) а потом ее конвертировать в txt.
        Вам нужно поместить номера в файл так, что бы в каждой строке был только один екземпляр номера.
        Данные номера отделять символом табуляции. Должно выйти так: \"123456\\tКакой-то город\\tИмя жильца\".
        Файл назвать так: \"data_for_jwHomeNumbers.txt\", в кодировке: \"UTF-8\".
        Положить в файл родительского каталога (обычно, он первым открывается в файловом менеджере)</string>
</resources>
